--- a/templates/default/default.conf.erb
+++ b/templates/default/default.conf.erb
@@ -9,10 +9,12 @@ server {
 
     #access_log  logs/host.access.log  main;
 
+<% if node["nginx"]["enable_default_location"] %>
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
     }
+<% end %>
 
     error_page  404              /404.html;
     location = /404.html {
